# softwaresoftware

./: .gitignore  CLAUDE.md  LICENSE  mesh.py  probes.py  pyproject.toml  registry.py  resolver.py  server.py  telemetry.py
.claude-plugin/: plugin.json
docs/: capability-contracts.md
skills/config/: SKILL.md
skills/info/: SKILL.md
skills/install/: SKILL.md
skills/setup/: SKILL.md
skills/uninstall/: SKILL.md
tests/: conftest.py  test_manifest.py  test_mesh.py  test_probes.py  test_registry.py  test_resolver.py  test_satisfier.py  test_uninstall.py
