[project]
name = "softwaresoftware"
version = "1.4.0"
description = "Plugin dependency resolver for Claude Code"
requires-python = ">=3.11"
authors = [{name = "Thatcher"}]
dependencies = [
    "mcp[cli]",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
